<resources>

    <string name="tag_line" translatable="false">Download All Status on One Click</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="share_txt">Hey view/download this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="share_app_message">Download All Videos using this app. Download Now</string>


    <!--AdMob Id-->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_ad" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_ad" translatable="false">ca-app-pub-3940256099942544/1033173712</string>


    <string name="fb_placement_id" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fb_placement_interstitial_id" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>


    <string name="change_lang">Change Language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="change_your_language">Change Your Language</string>
    <string name="arabic">العربية</string>
    <string name="gallery">Gallery</string>


----------------------------------------------------------------------------------------------------------------------------------
    <!-- main activity -->
    <string name="app_name">Al Huda group </string>
    <string name="account">My Account</string>
    <string name="report">fueling report</string>
    <string name="prics">fuel prices</string>
    <string name="card">get card</string>
    <string name="stations">Al-Huda stations</string>
    <string name="Rio">Rio Cafe</string>
    <string name="reef">Al-Reef</string>
    <string name="totaloil">Total oil</string>
    <string name="Info"> Info</string>

    <!-- Log in activity -->
    <string name="login"> Log In</string>
    <string name="email"> Email</string>
    <string name="pasword"> Password</string>
    <string name="forgetp"> forgot password ?</string>
    <string name="signup"> log in as guest</string>

    <!-- reset password activity -->
    <string name="newpas"> Enter New Password</string>
    <string name="confirmpass"> confirm password</string>
    <string name="resetpas"> Reset password</string>

    <!-- about us activity -->
    <string name="company_name_title">Al Huda group</string>
    <string name="company_tag_name">details</string>
    <string name="email_title">Email</string>
    <string name="email_tag">inf0@alhuda.com</string>
    <string name="website_title">Website</string>
    <string name="website_tag">http://www.alhuda.ps/</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_tag">Click to Read Privacy Policy</string>
    <string name="about_title">About</string>


    <string name="ch_email">Change Email</string>
    <string name="new_email">Enter Your New Email</string>
    <string name="ch_phone">Change Phone</string>
    <string name="new_phone">Enter Your New Phone</string>
    <string name="ch_name">Change Name</string>
    <string name="new_name">Enter Your Name</string>



    <!-- my account activity -->
    <string name="name">NAME :</string>
    <string name="phonee">Phone :</string>
    <string name="logout">Log Out</string>


    <!-- total oil activity -->
    <string name="Products">Products</string>
    <string name="Our_agents">Our agents</string>

    <!-- rio menu activity -->
    <string name="LOCAITON">LOCAITON</string>
    <string name="MENU">MENU</string>

    <!-- get card activity -->
    <string name="balance">balance in NIS</string>
    <string name="Car_Number">Car Number</string>
    <string name="gasoline95">gasoline 95</string>
    <string name="gasoline98">gasoline 98</string>
    <string name="diesel">Diesel</string>
    <string name="r_card">Request a card</string>


    <string name="r_rest">Al Reef Resturant</string>
    <string name="card_no">Card number</string>
    <string name="total_card">Total Card</string>
    <string name="sautes_card">Sautes Card</string>
    <string name="fill_nis">FILLING IN NIS</string>
    <string name="fill_lit">FILLING IN LIT</string>
    <string name="fill_rep">REPORT</string>

    <string name="red_m">Super Market Red</string>
    <string name="lazmek_m">Lazmek</string>

    <string name="kasho">Kasho Nuts</string>
    <string name="back">Back</string>


</resources>
