<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/RLTopLayout"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@drawable/rectangle_blue"
                    android:visibility="visible">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="254dp"
                        android:layout_marginBottom="120dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imBack14"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:padding="5dp"
                                ads:srcCompat="@drawable/leftarrow"
                                tools:ignore="VectorDrawableCompat" />

                            <ImageView
                                android:id="@+id/imInfo"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:padding="10dp"
                                android:visibility="gone"
                                ads:srcCompat="@drawable/ic_about"
                                ads:tint="@color/white"
                                tools:ignore="VectorDrawableCompat" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="374dp"
                            android:layout_height="146dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="24dp"
                            android:background="@drawable/rectangle_white"
                            android:paddingTop="40dp"
                            android:paddingBottom="40dp">

                            <ImageView
                                android:id="@+id/IMIcon"
                                android:layout_width="200dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/icon_tr" />

                            <TextView
                                android:id="@+id/TVTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/IMIcon"
                                android:layout_centerHorizontal="true"
                                android:text="@string/app_name"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/home_app_title"
                                android:textStyle="bold" />

                        </RelativeLayout>
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RLTopLayout"
                    android:layout_marginTop="-120dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">


                    <RelativeLayout
                        android:id="@+id/RLTopMain"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <LinearLayout
                            android:id="@+id/lytchangpsw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/ch_email"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textColor="@color/colorPrimaryDark" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/new_email">

                                <EditText
                                    android:id="@+id/edtoldpsw"
                                    android:layout_width="match_parent"
                                    android:layout_height="69dp"
                                    android:inputType="textPassword"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/change_email_bt"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="50dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="10dp"
                                android:onClick="OnBtnClick"
                                android:text="@string/ch_email"
                                android:textColor="@color/white"
                                ads:backgroundTint="@color/colorPrimaryDark" />

                        </LinearLayout>
                    </RelativeLayout>

                    <!--Added for Language Tag : Start-->

                    <!--Added for Language Tag :End-->
                </LinearLayout>


            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>
</layout>